--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-youtube": "^10.1.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
+    "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
